tests/opaque_struct_misuse/error.txt
Validation error: ./tests/opaque_struct_misuse/opaque_struct_misuse.fae, line 4: Cannot construct type `OpaqueStruct` as it is an opaque struct
  4|     OpaqueStruct {}
         ^^^^^^^^^^^^

Validation error: ./tests/opaque_struct_misuse/opaque_struct_misuse.fae, line 5: Opaque struct `OpaqueStruct` may not have its size calculated
  5|     size_of<OpaqueStruct>()
         ^^^^^^^^^^^^^^^^^^^^^^^

Validation error: ./tests/opaque_struct_misuse/opaque_struct_misuse.fae, line 6: Opaque struct `OpaqueStruct` may not have its alignment calculated
  6|     alignment_of<OpaqueStruct>()
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
